<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".Opciones.MisDatos">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/MisDatostxt"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--foto-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImagenDato"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_perfil"/>

        <!--uid-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/uiDatotxt"
                android:text="@string/uiDatotxt"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/uiDato"
                android:text="@string/uiDato"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Nombre-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NombreDatotxt"
                android:text="@string/NombreDatotxt"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/NombreDato"
                android:text="@string/NombreDato"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--correo-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CorreoDatotxt"
                android:text="@string/CorreoDatotxt"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/CorreoDato"
                android:text="@string/CorreoDato"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Contraseña-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ContraseñaDatotxt"
                android:text="@string/ContraseñaDatotxt"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ContraseñaDato"
                android:text="@string/ContraseñaDato"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--telefono-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TelefonoDatotxt"
                android:text="@string/TelefonoDatotxt"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/TelefonoDato"
                android:text="@string/TelefonoDato"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--actualizar datos-->
        <Button
            android:id="@+id/bt_actualizar"
            android:text="@string/bt_actualizar"
            android:backgroundTint="@color/black"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--actualizar contraseña-->
        <Button
            android:id="@+id/bt_actualizarcontra"
            android:text="@string/bt_actualizarcontra"
            android:backgroundTint="@color/black"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>