<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--FONDO-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_portada"
            android:scaleType="center"/>

        <!--RECUPERAR DATOS-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:padding="12dp">

            <!--FOTO DE PERFIL-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/foto_perfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:background="@color/teal_700"
                android:padding="3dp"
                android:scaleType="centerCrop" />
            <!--FOTO DE PERFIL-->

            <!--MAS DATOS-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <!--Fecha-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/calendario_ico"/>

                    <TextView
                        android:id="@+id/fecha"
                        android:text="@string/fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Uid-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/uidtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uidtxt"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/uidPerfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/uidPerfil"
                        android:textColor="@color/black" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Correo-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/correotxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correotxt"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/correoPerfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/correoPerfil"
                        android:textColor="@color/black" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Nombres-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nombretxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombretxt"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/nombrePerfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/nombrePerfil"
                        android:textColor="@color/black" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--MAS DATOS-->

            <!--MENU OPCIONES-->

            <!--Opcion 1-2-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--Mis Datos-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_datos" />

                    <Button
                        android:id="@+id/MisDatosOpcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/MisDatosOpcion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--Mis Datos-->

                <!--CREAR CITA MEDICA-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_citasmedicas" />

                    <Button
                        android:id="@+id/CrearCitaMedicaOpcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/CrearCitaMedicaOpcion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--CREAR CITA MEDICA-->

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Opcion 3-4 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--PUBLICACIONES-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_historial" />

                    <Button
                        android:id="@+id/HistorialOpciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/HistorialOpciones"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--PUBLICACIONES-->

                <!--USUARIOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_usuarios" />

                    <Button
                        android:id="@+id/UsuariosOpcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/UsuariosOpcion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--USUARIOS-->

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Opcion 5-6-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--CHATS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_chats" />

                    <Button
                        android:id="@+id/ChatsOpcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/ChatsOpcion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--CHATS-->

                <!--SALIR/CERRAR SESION-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_salir" />

                    <Button
                        android:id="@+id/CerrrarSesion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/boton_personalizado"
                        android:text="@string/CerrrarSesion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--SALIR/CERRAR SESION-->

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>


</androidx.core.widget.NestedScrollView>